Separated cached css and js files to be located under their appropriate module.
Added functionality to wipe memory or file cache.

Modified the .htaccess, module objects, and related CSS files to use a new url format for all requested files.

Updated the portfolio image management page to use the new url format to display uploaded images.

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -3,14 +3,14 @@ RewriteEngine on
 
 RewriteRule ^$ - [L]
 
-#Translate assets/<directory>/<module_name>/<theme>/file urls
-RewriteRule ^assets/(.*)/(.*)/(.*)/((.*).(.*)) assets/$1/index.php?module=$2&theme=$3&file=$4 [QSA,L,NC]
+#Translate assets/modules/<module_name>/<file_type>/theme/<theme>/<file_path> urls
+RewriteRule ^assets/modules/((?!/)[a-zA-Z0-9\-]+)/((?!/)[a-zA-Z0-9\-]+)/theme/((?!/)[a-zA-Z0-9\-]+)/((.*).(.*)) assets/$2/index.php?module=$1&theme=$3&file=$4 [QSA,L,NC]
 
-#Translate assets/<directory>/<module_name>/file urls
-RewriteRule ^assets/(.*)/(.*)/((.*).(.*)) assets/$1/index.php?module=$2&file=$3 [QSA,L,NC]
+#Translate assets/<module_name>/<file_type>/<file_path> urls
+RewriteRule ^assets/modules/((?!/)[a-zA-Z0-9\-]+)/((?!/)[a-zA-Z0-9\-]+)/((.*).(.*)) assets/$2/index.php?module=$1&file=$3 [QSA,L,NC]
 
 #Translate assets/<directory>/file urls
-RewriteRule ^assets/(.*)/((.*).(.*)) assets/$1/index.php?file=$2 [QSA,L,NC]
+#RewriteRule ^assets/((?!/)[a-zA-Z0-9\-]+)/((.*).(.*)) assets/$1/index.php?file=$2 [QSA,L,NC]
 
 RewriteRule ^(assets) - [L]
 
