--- a/public/.htaccess
+++ b/public/.htaccess
@@ -14,13 +14,23 @@ RewriteRule ^assets/modules/((?!/)[a-zA-Z0-9\-]+)/((?!/)[a-zA-Z0-9\-]+)/((.*).(.
 
 RewriteRule ^(assets) - [L]
 
+#Add on the home page if no page is present
+RewriteRule ^(.*)/$ $1/home [QSA,NC]
+
+# ----- AJAX -----
+
+#Root directory page
+RewriteRule ^ajax/([a-z-]+)$ ajax/index.php?page=$1 [QSA,L,NC]
+
+#Separate out the subdirectory path from the page
+RewriteRule ^ajax/(.*)/(.*)$ ajax/index.php?subd=$1&page=$2 [QSA,L,NC]
+
+RewriteRule ^(ajax) - [L]
+
 # ----- Pages -----
 
 #Root directory page
-RewriteRule ^((?!ajax/)([a-z-]+))$ index.php?page=$1 [QSA,L,NC]
-
-#Add on the home page if no page is present
-RewriteRule ^((?!ajax/)(.*))/$ $1/home [QSA,L,NC]
+RewriteRule ^([a-z-]+)$ index.php?page=$1 [QSA,L,NC]
 
 #Separate out the subdirectory path from the page
-RewriteRule ^((?!ajax/)(.*))/(.*)$ index.php?subd=$1&page=$3 [QSA,L,NC]
+RewriteRule ^(.*)/(.*)$ index.php?subd=$1&page=$2 [QSA,L,NC]
