--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,39 +1,8 @@
 Options +FollowSymlinks
 RewriteEngine on
 
-RewriteRule ^$ - [L]
+RewriteRule ^assets/((?!/)[a-zA-Z]+)/((?!(index\.php))(.*).(.*))$ assets/$1/index.php/$2 [QSA,L,NC]
 
-#Translate assets/modules/<module_name>/<file_type>/theme/<theme>/<file_path> urls
-RewriteRule ^assets/modules/((?!/)[a-zA-Z0-9\-]+)/((?!/)[a-zA-Z0-9\-]+)/theme/((?!/)[a-zA-Z0-9\-]+)/((.*).(.*)) assets/$2/index.php?module=$1&theme=$3&file=$4 [QSA,L,NC]
+RewriteRule ^ajax/((?!(index\.php))(.*).(.*))$ ajax/index.php/$1 [QSA,L,NC]
 
-#Translate assets/<module_name>/<file_type>/<file_path> urls
-RewriteRule ^assets/modules/((?!/)[a-zA-Z0-9\-]+)/((?!/)[a-zA-Z0-9\-]+)/((.*).(.*)) assets/$2/index.php?module=$1&file=$3 [QSA,L,NC]
-
-#Translate assets/<directory>/file urls
-#RewriteRule ^assets/((?!/)[a-zA-Z0-9\-]+)/((.*).(.*)) assets/$1/index.php?file=$2 [QSA,L,NC]
-
-RewriteRule ^(assets) - [L]
-
-# ----- AJAX -----
-
-#Root directory page
-RewriteRule ^ajax/([a-z-]+)$ ajax/index.php?page=$1 [QSA,L,NC]
-
-#Add on the home page if no page is present
-RewriteRule ^ajax/(.*)/$ ajax/$1/home [QSA,NC]
-
-#Separate out the subdirectory path from the page
-RewriteRule ^ajax/(.*)/(.*)$ ajax/index.php?subd=$1&page=$2 [QSA,L,NC]
-
-RewriteRule ^(ajax) - [L]
-
-# ----- Pages -----
-
-#Root directory page
-RewriteRule ^([a-z-]+)$ index.php?page=$1 [QSA,L,NC]
-
-#Add on the home page if no page is present
-RewriteRule ^(.*)/$ $1/home [QSA,L,NC]
-
-#Separate out the subdirectory path from the page
-RewriteRule ^(.*)/(.*)$ index.php?subd=$1&page=$2 [QSA,L,NC]
+RewriteRule !(index\.php) /index.php/$1 [QSA,L,NC]
