--- a/scripts/install/nginx_site_template.conf
+++ b/scripts/install/nginx_site_template.conf
@@ -9,6 +9,7 @@ server {
 
         rewrite ^/assets/((?!/)[a-zA-Z]+)/((?!(index\.php))(.*).(.*))$ /assets/$1/index.php/$2 last;
         rewrite ^/ajax/((?!(index\.php))(.*).(.*))$ /ajax/index.php/$1 last;
+        rewrite ^/api/((?!(index\.php))(.*).(.*))$ /api/index.php/$1 last;
         rewrite /((?!(index\.php))(.*)) /index.php/$1;
         rewrite ^/index.php/$ /index.php last;
 
